# flask-demo

./: README.md  client.py  manage.py  pyproject.toml  test.py
day01/: 1-快速启动flask项目.py  2-flask项目加载配置.py  3-路由的基本参数.py  4-路由转换器以及路由参数.py  5-自定义路由转换器.py  6-flask命令行运行.py  config.toml
day02/: 1-获取查询字符串中的值.py  2-Http获取请求体.py  3-Http获取请求头.py  4-响应数据.py  5-http-跳转页面.py  6-跳转页面并携带路由参数.py  7-自定义状态码和响应头.py  8-cookie的使用和基于cookie的登录验证.py  9-session的使用和基于session的登录验证.py
day03/: 1-请求全局钩子及其生命周期.py  2-主动抛出异常和捕获异常.py  3-上下文全局变量.py  4-flask 部分子命令.py  5-练习生成项目.py  6-flask中视图引入模板.py  7-render_template与render_template_string.py
day03/templates/: index.html
day04/: 1-模版输出变量.py  2-模板中的IF流程控制.py  3-模板中的FOR流程控制.py  4-过滤器的基本使用.py  5-常见的内置过滤器.py  6-列表过滤器与块过滤器.py  7-自定义过滤器.py  8-模板继承.py  9-CSRF攻击防范.py  filters.py
day04/templates/: commodity.html  index1.html  index10.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index9.html  login.html
day05/1-SQLAlchemy基本使用/: db.py  main.py  models.py
day05/10-Flask-SQLAlchemy关联查询一对多/: manage.py  models.py
day05/2-Flask-SQLAlchemy连接/: db.py  manage.py  models.py
day05/3-Flask-SQLAlchemy基本操作[REST]/: manage.py  models.py
day05/4-Flask-SQLAlchemy查询数据/: db.py  manage.py
day05/5-Flask-SQLAlchemy过滤查询/: config.py  manage.py  models.py
day06/: 1-创建连接、会话及模型.py  10-其他操作.py  11-原生 SQL 执行.py  12-异步操作.py  2-添加一条数据.py  3-添加多条数据.py  4-查询一条数据.py  5-条件过滤数据.py  5-查询多条数据.py  6-逻辑查询数据.py  7-成员查询数据.py  8-更新数据.py  9-删除数据.py  db.py  model.py
day07/: 10-Flask-Session结合SqlAlchemy.py  11-Flask-Session结合Redis.py  form.html
(+39 files in other folders)
